Changelog of Jail

1.0.1
- Prisoners in deleted jails are now assigned automatically to random jails #21
- Offline unjailed players are now teleported back to spawn when they join #20
- Offline unjailed players' inventory and gamemode are now recovered upon rejoin #20
- SellHand signs now show money-per-block to prisoner
- Fixed incorrect message output of '/jailmine set' command

1.0.0
- Added informational commands for admins to obtain data from the plugin
- Prisoners' force jail TP now only occurs upon Δs(displacement change)
- Item dropping by prisoners can now be disabled in config
- Players w/ perm 'jail.override.restrictions' can ignore all jail restrictions
- Fixed config key 'check-UUID' being ignored by the code
Technical updates:
- Old config file(s) is now saved with old version name
- 'offline-time-counting' is now default as false
New commands:
- /prisonerinfo <player_name>
- /jailinfo <jail>

Alpha0.3.4
- Fixed error when allow-chat=true & allow-command=false #18
- Fixed all errors caused by name case detections #16 #18 #15

Alpha0.3.3
- Fixed error in console when a jailed player joins
- Fixed BlockPlacer not resetting the whole mine
- Fixed non-jailed players get kicked upon second join

Alpha0.3.2
- Fixed player-UUIDs checked with incorrect data-type

Alpha0.3.1
- API updated, should support the latest PocketMine build
- Fixed error message popping when a player who's jailed forever joins
- Fixed player-UUID incorrectly saved

Alpha0.3.0
- Implemented Mining-For-Money-For-Bailing feature! (Tutorial soon)
- Fixed newly joined players all being jailed bug #10
- Fixed console popping errors of isJailed()-error bug #10
- Added support for EconomyPlus (Prisoner bail function)
- Added support for individual jail's bail status(Allow bailing or not)
- Default time unit is now customizable in configuration file
- Implemented sign support: 1st line: [Bail] [ResetMine] [SellHand]
- Fixed some messages not converted from their keys